--- a/README
+++ b/README
@@ -56,3 +56,9 @@ put this html directly after your video tag, at the same level in the DOM tree. 
   </div>
 </div>
 
+
+Recommended Reading
+-------------------
+
+http://diveintohtml5.org/video.html
+
